# climatewatch-gateway

./: .cache.sqlite  .gitignore  README.md  build-images.sh  docker-compose.yml  pyproject.toml
alerts_service/: .env.example  Dockerfile  README.md  alerts.py  main.py  weather_client.py
favorites_service/: .env.example  Dockerfile  README.md  db.py  favorites.db  main.py  models.py  requeriments.txt  routes.py  schemas.py
gateway/: .env.example  Dockerfile  README.md  auth.py  auth_routes.py  create_user.py  db.py  main.py  models.py  requeriments.txt  routes.py  schemas.py
gateway/routes/: auth_routes.py  routes.py
weather_service/: .cache.sqlite  Dockerfile  README.md  main.py  requeriments.txt  weather_utils.py
